--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>672</width>
-    <height>646</height>
+    <width>798</width>
+    <height>662</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,8 +24,8 @@
    <property name="styleSheet">
     <string notr="true"/>
    </property>
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="1" column="0">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
      <layout class="QGridLayout" name="gridLayout">
       <item row="1" column="0">
        <widget class="QLabel" name="label_edicio">
@@ -275,7 +275,7 @@ image: url(:/slider/images/sliderboto.png);
          </widget>
         </item>
         <item row="0" column="0">
-         <widget class="QVUMeter" name="qvumeter">
+         <widget class="QVUMeter" name="qvumeter" native="true">
           <property name="maximumSize">
            <size>
             <width>50</width>
@@ -288,7 +288,7 @@ image: url(:/slider/images/sliderboto.png);
           <property name="whatsThis">
            <string>VU Meter</string>
           </property>
-          <property name="maxValue">
+          <property name="maxValue" stdset="0">
            <double>1.000000000000000</double>
           </property>
          </widget>
@@ -370,13 +370,19 @@ image: url(:/slider/images/sliderboto.png);
         <property name="enabled">
          <bool>true</bool>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="font">
          <font>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>4</number>
         </property>
         <widget class="QWidget" name="tab_transicions">
          <attribute name="title">
@@ -546,146 +552,58 @@ image: url(:/slider/images/sliderboto.png);
          </layout>
         </widget>
         <widget class="QWidget" name="tab_grafics">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <attribute name="title">
           <string>Gràfics</string>
          </attribute>
-         <layout class="QGridLayout" name="gridLayout_6">
-          <item row="2" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_5">
-            <item>
-             <widget class="QLabel" name="label">
-              <property name="font">
-               <font>
-                <pointsize>11</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Mosca</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="moscaButton">
-              <property name="text">
-               <string>Selecciona</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_7">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-          <item row="2" column="4">
-           <widget class="QCheckBox" name="checkBox_insereixlogo">
-            <property name="text">
-             <string>Insereix</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="4" rowspan="3">
-           <widget class="QLabel" name="moscalabel">
-            <property name="minimumSize">
-             <size>
-              <width>80</width>
-              <height>60</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(0, 0, 0);</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="8" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_8">
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="font">
-               <font>
-                <pointsize>11</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Templates</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="templatesButton">
-              <property name="text">
-               <string>Selecciona</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_8">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-          <item row="8" column="4">
-           <widget class="QCheckBox" name="checkBox_2">
-            <property name="text">
-             <string>Insereix</string>
-            </property>
-           </widget>
-          </item>
-          <item row="9" column="4" rowspan="3">
-           <widget class="QLabel" name="templatelabel">
-            <property name="minimumSize">
-             <size>
-              <width>80</width>
-              <height>60</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(0, 0, 0);</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0" rowspan="2">
-           <layout class="QVBoxLayout" name="verticalLayout">
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="0" column="0">
+           <layout class="QVBoxLayout" name="mosca">
             <property name="sizeConstraint">
              <enum>QLayout::SetFixedSize</enum>
             </property>
             <item>
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>Posició</string>
+             <layout class="QHBoxLayout" name="horizontalLayout_5">
+              <property name="sizeConstraint">
+               <enum>QLayout::SetFixedSize</enum>
               </property>
-             </widget>
+              <item>
+               <widget class="QLabel" name="label">
+                <property name="font">
+                 <font>
+                  <pointsize>11</pointsize>
+                  <weight>75</weight>
+                  <bold>true</bold>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>Mosca</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="moscaButton">
+                <property name="text">
+                 <string>Selecciona</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_3">
+              <item>
+               <widget class="QLabel" name="label_3">
+                <property name="text">
+                 <string>Posició</string>
+                </property>
+               </widget>
+              </item>
               <item>
                <widget class="QLabel" name="label_5">
                 <property name="text">
@@ -720,37 +638,98 @@ image: url(:/slider/images/sliderboto.png);
                 </property>
                </widget>
               </item>
-              <item>
-               <spacer name="horizontalSpacer_9">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
              </layout>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
-          <item row="9" column="0" rowspan="2">
-           <layout class="QVBoxLayout" name="verticalLayout_2">
+          <item row="1" column="1">
+           <layout class="QVBoxLayout" name="templates_preview">
             <property name="sizeConstraint">
              <enum>QLayout::SetFixedSize</enum>
             </property>
             <item>
-             <widget class="QLabel" name="label_4">
+             <widget class="QCheckBox" name="checkBox_2">
               <property name="text">
-               <string>Posició</string>
+               <string>Insereix</string>
               </property>
              </widget>
             </item>
             <item>
+             <widget class="QLabel" name="templatelabel">
+              <property name="minimumSize">
+               <size>
+                <width>80</width>
+                <height>60</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(0, 0, 0);</string>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item row="1" column="0">
+           <layout class="QVBoxLayout" name="templates">
+            <property name="sizeConstraint">
+             <enum>QLayout::SetFixedSize</enum>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_8">
+              <property name="sizeConstraint">
+               <enum>QLayout::SetFixedSize</enum>
+              </property>
+              <item>
+               <widget class="QLabel" name="label_2">
+                <property name="font">
+                 <font>
+                  <pointsize>11</pointsize>
+                  <weight>75</weight>
+                  <bold>true</bold>
+                 </font>
+                </property>
+                <property name="text">
+                 <string>Templates</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="templatesButton">
+                <property name="text">
+                 <string>Selecciona</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
              <layout class="QHBoxLayout" name="horizontalLayout_6">
+              <item>
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>Posició</string>
+                </property>
+               </widget>
+              </item>
               <item>
                <widget class="QLabel" name="label_7">
                 <property name="text">
@@ -785,35 +764,52 @@ image: url(:/slider/images/sliderboto.png);
                 </property>
                </widget>
               </item>
-              <item>
-               <spacer name="horizontalSpacer_10">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
              </layout>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
-          <item row="2" column="5">
-           <spacer name="horizontalSpacer_6">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+          <item row="0" column="1">
+           <layout class="QVBoxLayout" name="mosca_preview">
+            <property name="margin">
+             <number>0</number>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+            <item>
+             <widget class="QCheckBox" name="checkBox_insereixlogo">
+              <property name="text">
+               <string>Insereix</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="moscalabel">
+              <property name="minimumSize">
+               <size>
+                <width>80</width>
+                <height>60</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(0, 0, 0);</string>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
@@ -828,8 +824,8 @@ image: url(:/slider/images/sliderboto.png);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>672</width>
-     <height>25</height>
+     <width>798</width>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCaptura">
