--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -275,7 +275,7 @@ image: url(:/slider/images/sliderboto.png);
          </widget>
         </item>
         <item row="0" column="0">
-         <widget class="QVUMeter" name="qvumeter" native="true">
+         <widget class="QVUMeter" name="qvumeter">
           <property name="maximumSize">
            <size>
             <width>50</width>
@@ -288,7 +288,7 @@ image: url(:/slider/images/sliderboto.png);
           <property name="whatsThis">
            <string>VU Meter</string>
           </property>
-          <property name="maxValue" stdset="0">
+          <property name="maxValue">
            <double>1.000000000000000</double>
           </property>
          </widget>
@@ -382,13 +382,8 @@ image: url(:/slider/images/sliderboto.png);
          </font>
         </property>
         <property name="currentIndex">
-         <number>4</number>
+         <number>1</number>
         </property>
-        <widget class="QWidget" name="tab_transicions">
-         <attribute name="title">
-          <string>Transicions</string>
-         </attribute>
-        </widget>
         <widget class="QWidget" name="tab_audio">
          <attribute name="title">
           <string>Àudio</string>
@@ -825,7 +820,7 @@ image: url(:/slider/images/sliderboto.png);
      <x>0</x>
      <y>0</y>
      <width>798</width>
-     <height>27</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCaptura">
